# MimikEdge

./: MimikEdge.podspec  README.md
Edge.framework/: Info.plist
Edge.framework/Headers/: EdgeService.h
Edge.framework/Modules/: module.modulemap
Frameworks/Edge.framework/: CMakeLists.txt  Info.plist
Frameworks/Edge.framework/Headers/: Edge.h  EdgeService.h
